Refactor: Cleanup imports, improve null safety, and streamline test assertions
- Remove unused and redundant imports.
- Replace certain `Optional` usages with direct null checks for streamlining.
- Strengthen null safety by adding assertions and validation checks.
- Refactor repetitive string usage into direct parameter passing for method names.
- Simplify `McpToolResultAssert` assertions in tests.
- Convert to standardized inlay addition and editor relevance checks.
- Replace deprecated or verbose annotations/methods with updated alternatives.
- Adjust tests and tools to better align with updated setup and validation practices.